# cpp_cli_srv

./: 1.win.txt  API_FORMAT.md  BINARIES.md  BUILD_STATIC.md  BUILD_UBUNTU.md  BUILD_UBUNTU.md.merged  CHANGES.md  CMakeLists.txt  HTTPS_SETUP.md  LOGGING.md  PERMISSION_FIX.md  README.md  TOKEN_SECURITY.md  build.bat  build.sh  build_debug.bat  fix_permissions.sh  pkg.sh  test_cli.bat  test_cli.sh  test_concurrent.bat  test_echo.bat  test_global_json.bat  test_global_json.sh  test_json_parse  test_rapid_edits.sh  test_req.js  test_server.sh  test_shell.sh  test_shutdown_save.sh  test_token.bat  test_token.sh  test_token_read
cli/: main.cpp
core/: commands.h  engine.h  logger.h
doc/: api-reference.md  https-setup.md  linux-build.md  logging.md  security.md  static-build.md  windows-build.md
server/: .main.cpp.swp  main.cpp
test/: README.md  test_comprehensive.sh  test_global_json.sh  test_https.sh  test_ipv6.bat  test_ipv6v.bat  test_json.bat  test_json.sh  test_json_parse.cpp  test_logging.sh  test_server.bat  test_shell.bat  test_sigterm_save.sh  test_token_read.cpp
web/: app.html  index.html
